--- a/trendy-fashion/src/Style/ProductPage.css
+++ b/trendy-fashion/src/Style/ProductPage.css
@@ -8,8 +8,14 @@
   border: 1px solid black;
 }
 .DataCardDiv {
-  width: 70%;
+  width: 100%;
   border: 1px solid black;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+.ProNav {
+  border: 1px solid;
+  display: flex;
+  justify-content: space-around;
 }
